logs/Slang/chapter-8/8.26.5--cast_between_interface_classes.sv.log
name: cast_between_interface_classes
description: it should be possible to cast between implemented interface classes
should_fail: 0
tags: 8.26.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.5--cast_between_interface_classes.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.5--cast_between_interface_classes.sv:8:2: error: language feature not yet supported
	interface class ihello;
	^~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.5--cast_between_interface_classes.sv:12:2: error: language feature not yet supported
	interface class itest;
	^~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.5--cast_between_interface_classes.sv:16:2: error: language feature not yet supported
	class Hello implements ihello, itest;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.5--cast_between_interface_classes.sv:25:2: error: use of undeclared identifier 'Hello'
	Hello obj;
	^~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.5--cast_between_interface_classes.sv:26:2: error: use of undeclared identifier 'ihello'
	ihello ih_ref;
	^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.5--cast_between_interface_classes.sv:27:2: error: use of undeclared identifier 'itest'
	itest it_ref;
	^~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.5--cast_between_interface_classes.sv:30:9: error: language feature not yet supported
		obj = new;
		      ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.5--cast_between_interface_classes.sv:32:3: error: use of undeclared identifier '$cast'
		$cast(it_ref, ih_ref);
		^~~~~
